Mon Jul 30 20:15:48 2001  Nicola Pero  <n.pero@mi.flashnet.it>

	* documentation.make (HAS_LATEX2HTML): New variable to reduce the
	number of times that LATEX2HTML is evaluated.

2001-07-26  Adam Fedor  <fedor@gnu.org>

	* GNUstep.csh.in: Set GCC_SO_DIR
	* GNUstep.sh.in: Export GCC_SO_DIR
	* ld_lib_path.sh: Use it in library path.
	* ld_lib_path.csh: Likewise.

	* gnustep-make.spec.in: Remove csh rules so rpm won't depend
	on csh.

	* Documentation/README.MingW: Update.
	* Documentation/machines.texi: Likewise.

Thu Jul 26 12:26:10 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* Documentation/internals.tex: Revised and updated this document
	to describe the new gnustep-make internals.

Tue Jul 24 13:48:24 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* rules.make (ALL_JAVADOCFLAGS): Readded INTERNAL_JAVADOCFLAGS
	which had been removed by mistaked.

2001-07-19  Adam Fedor  <fedor@gnu.org>

	* documentation.make (LATEX2HTML): Filter out which error messages.
	* Documentation/makedoc.make: Likewise.

	* Documentation/readme.texi: Explain license more clearly.
	* Documentation/gnustep-howto.texi: Likewise.
	* Documentation/README.MinGW: Update.

Thu Jul 19 10:35:22 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* application.make: Removed annoying debugging message.

Mon Jul 16 11:35:51 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* bundle.make (internal-clean): Depend on .subprojects; make clean
	rules moved here; modified to remove all compiled bundles by using
	BUNDLE_NAME.
	(internal-distclean): Idem.
	(internal-bundle-clean, internal-bundle-distclean): Idem.
	* gswbundle.make: Same changes to the same rules.
	
Fri Jul 13 18:31:26 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* test-application.make (APP_EXTENSION): Set it, fixing 
	the bug on make clean.

Fri Jul 13 18:29:03 2001  Nicola Pero  <nicola@brainstorm.co.uk>

	* application.make (internal-clean): Simplified by using 
	GNUSTEP_OBJ_DIR.
	* gswapp.make (internal-clean): Idem.