@@ -1,3 +1,8 @@
+2001-08-02  Adam Fedor  <fedor@gnu.org>
+
+	* GNUstep.sh.in: Look for use scriptin ~/GNUstep.
+	* GNUstep.csh.in: Likewise.
+
 Mon Jul 30 20:15:48 2001  Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* documentation.make (HAS_LATEX2HTML): New variable to reduce the
